--- a/manifest_2.json
+++ b/manifest_2.json
@@ -7,6 +7,7 @@
         "service_worker": "background.js"
     },
     "action": {
+        "default_popup": "popup.html",
         "default_icon": {
             "16": "/youtube_hide_views.png",
             "32": "/youtube_hide_views.png",
